Modal fetches data and forwards to Edit Page

--- a/teacher/templates/teacher/ngo_admin_dashboard.html
+++ b/teacher/templates/teacher/ngo_admin_dashboard.html
@@ -105,7 +105,7 @@
       Past Content Campaigns
     </h5>
   </div>
-  <!-- <table
+  <table
   class="table"
   id="dtHorizontalVerticalExampleWrapper"
   class="table table-bordered table-sm"
@@ -127,7 +127,7 @@
     </tr>
     {% endfor%}
   </tbody>
-</table> -->
+</table>
 </div>
 
 
