--- a/teacher/templates/teacher/ngo_admin_chw.html
+++ b/teacher/templates/teacher/ngo_admin_chw.html
@@ -97,9 +97,11 @@
     <tbody>
       {% for worker in health_workers %}
       <tr data-toggle="modal" data-target="#tbModal" class="trRecentCampaign">
-        <td class="recentTitle">{{ worker.id }}</td>
-        <td class="recentDate">{{ worker.name }}</td>
-        <td class="recentDate">{{ worker.region }}</td>
+        <td class="id">{{ worker.id }}</td>
+        <td class="name">{{ worker.name }}</td>
+        <td class="region">{{ worker.region }}</td>
+        <td class="access_token" style="display:none;" >{{ worker.access_token }}</td>
+        <td class="age" style="display:none;" >{{ worker.age }}</td>
       </tr>
       {% endfor%}
     </tbody>
@@ -109,7 +111,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="gfgmodallabel" style"text-align: center">Selected Content</h5>
+        <h5 class="modal-title" id="gfgmodallabel" style"text-align: center">Selected Health Worker</h5>
         <button
           type="button"
           class="close"
@@ -139,32 +141,35 @@
 <script>
   $(function () {
     $(".trRecentCampaign").click(function () {
-        var title = $(this).find(".recentTitle").text();
-        var details = $(this).find(".recentDetails").text();
-        var associated_link = $(this).find(".recentLink").text();
-        var date = $(this).find(".recentDate").text();
-        var id = $(this).find(".recentId").text();
+        var id = $(this).find(".id").text();
+        var name = $(this).find(".name").text();
+        var age = $(this).find(".age").text();
+        var region = $(this).find(".region").text();
+        var access_token = $(this).find(".access_token").text();
 
         var p = "";
         p += "<form action='edit_content' method='POST'>"
 
 		    p += '<div class="container">'
-        p += '<h2 style="text-align: center" name="code">' + title + "</h2>";
-        p += '<p style="text-align: center" name="details">' + details + "</p>";
-        p += '<h5 style="text-align: center" name="date">' + associated_link + "</h5>";
-        p += '<h5 style="text-align: center" name="date">' + date + "</h5>";
-
-        p += '<input type="hidden" name="title" value="'+title+'"/>'
-        p += '<input type="hidden" name="details" value="'+details+'"/>'
-        p += '<input type="hidden" name="associated_link" value="'+associated_link+'"/>'
+        p += '<h2 style="text-align: center" name="id">' + id + "</h2>";
+        p += '<h5 style="text-align: center" name="name">' + name + "</h5>";
+        p += '<h5 style="text-align: center" name="age"> Age: ' + age + "</h5>";
+        p += '<h6 style="text-align: center" name="region">' + region + "</h6>";
+        p += '</br><div style="display: flex; justify-content: center;" id ="qrcode" ></div>'
         p += '<input type="hidden" name="id" value="'+id+'"/>'
+        p += '<input type="hidden" name="name" value="'+name+'"/>'
+        p += '<input type="hidden" name="age" value="'+age+'"/>'
+        p += '<input type="hidden" name="region" value="'+region+'"/>'
 		p += '<br/>'
         p += '<button type="submit" class="btn btn-success btn-lg btn-block" value="submit">Edit Content.</button>'
         p += "</form>"
         p += '</div>'
         $("#divGFG").empty();
         $("#divGFG").append(p);
+        new QRCode(document.getElementById("qrcode"), access_token);
     });
   });
 </script>
+
+
 {% endblock %}
