--- a/teacher/templates/teacher/ngo_admin_chw.html
+++ b/teacher/templates/teacher/ngo_admin_chw.html
@@ -122,7 +122,7 @@
         </button>
       </div>
       <div class="modal-body">
-	  <form class="deadline_completion" method="POST">
+	  <form class="ngo_admin_chw_edit" method="POST">
 	  {% csrf_token %}
         <div class="GFGclass" id="divGFG"></div>
 		</form>
@@ -148,7 +148,7 @@
         var access_token = $(this).find(".access_token").text();
 
         var p = "";
-        p += "<form action='edit_content' method='POST'>"
+        p += "<form action='edit_chw' method='POST'>"
 
 		    p += '<div class="container">'
         p += '<h2 style="text-align: center" name="id">' + id + "</h2>";
@@ -160,8 +160,8 @@
         p += '<input type="hidden" name="name" value="'+name+'"/>'
         p += '<input type="hidden" name="age" value="'+age+'"/>'
         p += '<input type="hidden" name="region" value="'+region+'"/>'
-		p += '<br/>'
-        p += '<button type="submit" class="btn btn-success btn-lg btn-block" value="submit">Edit Content.</button>'
+		    p += '<br/>'
+        p += '<button type="submit" class="btn btn-success btn-lg btn-block" value="submit">Edit Health Worker Information.</button>'
         p += "</form>"
         p += '</div>'
         $("#divGFG").empty();
