Edit Full Name Bug Fixed

--- a/teacher/templates/teacher/ngo_admin_edit_content.html
+++ b/teacher/templates/teacher/ngo_admin_edit_content.html
@@ -34,7 +34,7 @@
               type="text"
               class="form-control"
               id="inputContentTitle"
-              value={{ entry.title }}
+              value="{{ entry.title }}"
               name="inputContentTitle"
               required
             />
@@ -47,7 +47,7 @@
             type="text"
             class="form-control"
             id="inputContentLink"
-            value={{ entry.associated_link }}
+            value="{{ entry.associated_link }}"
             name="inputContentLink"
             required
           />
@@ -59,7 +59,7 @@
             type="text"
             class="form-control"
             id="inputCampaignDetails"
-            value={{ entry.details }}
+            value="{{ entry.details }}"
             name="inputCampaignDetails"
             required
           />
