--- a/teacher/templates/teacher/ngo_admin_edit_chw.html
+++ b/teacher/templates/teacher/ngo_admin_edit_chw.html
@@ -41,7 +41,7 @@
               type="text"
               class="form-control"
               id="inputID"
-              value={{ entry.id }}
+              value="{{ entry.id }}"
               name="inputID"
               required
             />
@@ -55,7 +55,7 @@
               type="text"
               class="form-control"
               id="inputName"
-              value={{ entry.name }}
+              value="{{ entry.name }}"
               name="inputName"
               required
             />
@@ -69,7 +69,7 @@
               type="number"
               class="form-control"
               id="inputAge"
-              value={{ entry.age }}
+              value="{{ entry.age }}"
               name="inputAge"
               required
             />
@@ -80,7 +80,7 @@
               type="text"
               class="form-control"
               id="inputRegion"
-              value={{ entry.region }}
+              value="{{ entry.region }}"
               name="inputRegion"
               required
             />
