--- a/teacher/templates/teacher/ngo_admin_create_content.html
+++ b/teacher/templates/teacher/ngo_admin_create_content.html
@@ -11,6 +11,14 @@
   style="color: #eeeeee"
   >Dashboard</a
 >
+
+<a
+  class="anim nav-link active"
+  href="{% url 'ngo_admin_chw' %} "
+  style="color: #eeeeee"
+  >Health Workers</a
+>
+
 {% endif %} {% endblock %} {% block body %}
 
 <div class="container" style="padding-top: 20px; padding-bottom: 10px">
