--- a/templates/login.html
+++ b/templates/login.html
@@ -23,14 +23,6 @@
 
         <div class="container">
             <div class="row align-items-center no-gutters" style="text-align: center">
-                <div class="col-sm-auto">
-                    <img src="{% static 'sust-logo.png' %}" width="200" height="200" class="d-inline-block" alt="">
-                    <div>
-                        <h1
-                            style="font-size: 30px;padding-bottom: 0px; margin-top: 10px; text-align:center; font-family: 'Source Sans Pro', sans-serif;">
-                            Exam Progress Tracker</h1>
-                    </div>
-                </div>
                 <div class="col-xl-auto">
                     <div class="container sec">
                         <div class="login-signup">
@@ -40,6 +32,7 @@
 
                                         <div class="col mobile-pull">
                                             <article role="login" style="background-color: #e9f3f8">
+                                                <h3>NGO Management Portal</h3>
                                                 <h1 class="text-center"
                                                     style="padding-right: 10px;font-family: 'Source Sans Pro', sans-serif;">
                                                     <i class="fa fa-lock"></i><span
