NGO Admin Profile Done

--- a/teacher/templates/teacher/ngo_admin_dashboard.html
+++ b/teacher/templates/teacher/ngo_admin_dashboard.html
@@ -63,6 +63,13 @@
   >Health Workers</a
 >
 
+    <a
+  class="anim nav-link active"
+  href="{% url 'ngo_admin_profile' %} "
+  style="color: #eeeeee"
+  >Profile</a
+>
+
 {% endif %} 
 {% endblock %} {% block body %}
 
