--- a/teacher/templates/teacher/ngo_admin_dashboard.html
+++ b/teacher/templates/teacher/ngo_admin_dashboard.html
@@ -53,9 +53,15 @@
   class="anim nav-link active"
   href="{% url 'ngo_admin_home' %} "
   style="color: #eeeeee"
-  >Dashboard</a
+  >Content</a
 >
 
+<a
+  class="anim nav-link active"
+  href="{% url 'ngo_admin_quizboard' %} "
+  style="color: #eeeeee"
+  >Quiz</a
+>
 <a
   class="anim nav-link active"
   href="{% url 'ngo_admin_chw' %} "
