--- a/teacher/templates/teacher/ngo_admin_edit_content.html
+++ b/teacher/templates/teacher/ngo_admin_edit_content.html
@@ -9,7 +9,27 @@
   class="anim nav-link active"
   href="{% url 'ngo_admin_home' %} "
   style="color: #eeeeee"
-  >Dashboard</a
+  >Content</a
+>
+
+<a
+  class="anim nav-link active"
+  href="{% url 'ngo_admin_quizboard' %} "
+  style="color: #eeeeee"
+  >Quiz</a
+>
+<a
+  class="anim nav-link active"
+  href="{% url 'ngo_admin_chw' %} "
+  style="color: #eeeeee"
+  >Health Workers</a
+>
+
+<a
+class="anim nav-link active"
+href="{% url 'ngo_admin_profile' %} "
+style="color: #eeeeee"
+>Profile</a
 >
 {% endif %} {% endblock %} {% block body %}
 
