--- a/teacher/templates/teacher/ngo_admin_profile.html
+++ b/teacher/templates/teacher/ngo_admin_profile.html
@@ -9,7 +9,14 @@
   class="anim nav-link active"
   href="{% url 'ngo_admin_home' %} "
   style="color: #eeeeee"
-  >Dashboard</a
+  >Content</a
+>
+
+<a
+  class="anim nav-link active"
+  href="{% url 'ngo_admin_quizboard' %} "
+  style="color: #eeeeee"
+  >Quiz</a
 >
 
 <a
