--- a/teacher/templates/teacher/ngo_admin_create_content.html
+++ b/teacher/templates/teacher/ngo_admin_create_content.html
@@ -65,20 +65,18 @@
 					id="inputContentLink"
 					placeholder="Enter Valid URL"
 					name="inputContentLink"
-					required
 				/>
 				</div>
 
 				<div class="form-group">
 					<label for="inputContentDetails">Campaign Details</label>
-					<input
+					<textarea
 					type="text"
 					class="form-control"
 					id="inputCampaignDetails"
 					placeholder="Enter Valid Content Details"
 					name="inputCampaignDetails"
-					required
-				/>
+					required></textarea>
 				</div>
 				
 				<div class="form-group">
@@ -93,7 +91,19 @@
 					required
 				/>
 				</div>
-				
+
+				<div class="form-group">
+					<label for="inputContentTags">Content Tags</label>
+					<input
+					type="text"
+					class="form-control"
+					id="inputContentTags"
+					placeholder="Enter Comma Separated Tags for the Content"
+					name="inputContentTags"
+					required
+				/>
+				</div>
+
 				<br />
 				<div class="col text-center">
 					<button
