--- a/teacher/templates/teacher/ngo_admin_edit_quiz.html
+++ b/teacher/templates/teacher/ngo_admin_edit_quiz.html
@@ -59,13 +59,14 @@ style="color: #eeeeee"
 							id="inputQuizTitle"
 							placeholder="Enter Valid Quiz Title"
 							name="inputQuizTitle"
-              value="{{ title }}"
+              				value="{{ title }}"
 							required
 						/>
 					</div>
 				</div>
+				<div id="quiz_fields">
+
         {% for question, choices, answer in quizzes %}
-          <div id="quiz_fields">
             <div class="form-group col-md-12">
               <div class='label'>Quiz {{ forloop.counter }}:</div>
               <div class="container">
@@ -81,8 +82,9 @@ style="color: #eeeeee"
                 <input type="number" class="form-control" id="inputQuizAnswer" placeholder="Enter Correct Answer Index" name="inputQuizAnswer" value="{{ answer }}" required/>
               </div>
             </div>
-          </div>
         {% endfor %}
+	</div>
+
 				<div style="display: flex; text-align: center;">
 					<div class="col text-center" >
 						<button
@@ -104,13 +106,26 @@ style="color: #eeeeee"
 							id="more_fields" 
 							onclick="remove_fields();"
 							style="text-align: center"
-							value="Remove More"
-						>
+							value="Remove More">
 							Remove Quiz
 						</button>
 					</div>
 				</div>
-				
+
+				<div class="form-row">
+					<div class="form-group col-md-12">
+						<label for="inputQuizTags">Quiz Tags</label>
+						<input
+							type="text"
+							class="form-control"
+							id="inputQuizTags"
+							placeholder="Enter Valid Quiz Tags"
+							name="inputQuizTags"
+              				value="{{ tags }}"
+							required
+						/>
+					</div>
+				</div>		
         <div class="form-group">
           <label for="datepicker">Campaign Expiration</label>
           <input
@@ -156,7 +171,8 @@ style="color: #eeeeee"
 
 	function remove_fields() {
 		var select = document.getElementById('quiz_fields');
-		select.removeChild(select.lastChild);
+		if(select.childElementCount>1)
+			select.removeChild(select.lastChild);
 	}
 </script>
 {% endblock %}
