--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    <title>Shetu - NGO Portal</title>
+    <title>SHAAKO - NGO Portal</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
@@ -27,12 +27,21 @@
       rel="stylesheet" />
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.3/css/mdb.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
     {% block head %} {% endblock %}
   </head>
 
   <body style="background-color: #f8f8f8">
     <nav class="navbar navbar-dark bg-dark navbar-expand-md" style="height: 70px">
       <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="{% static 'logo.png' %}" width="100" height="100" class="d-inline-block align-top" alt=""/>
+        </a>
+        <a class="navbar-brand" href="#">
+          <h4><b>Shaako Portal</b></h4>
+        </a>
         <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1">
           <span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span>
         </button>
